[package]
name = "bsd_auth-sys"
version = "0.0.4"
edition = "2018"
categories = ["external-ffi-bindings"]
description = "Minimal Rust bindings for OpenBSD's bsd_auth"
keywords = ["bsd", "auth", "ffi"]
license = "BSD-4-Clause"
repository = "https://github.com/orvij/bsd_auth-sys"

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
